[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Placeholders/garden_top_pixel_2.png" type="Texture" id=1]
[ext_resource path="res://Objects/CreateMap.gd" type="Script" id=2]
[ext_resource path="res://Assets/Placeholders/square.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/BaseFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://HUD/BaseButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/ActionHUD.gd" type="Script" id=6]
[ext_resource path="res://HUD/Overlay.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/WorldMap.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fonts/pixelmix.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 10 )

[node name="WorldMap" type="Node2D"]
script = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
visible = false
position = Vector2( 974.633, 507.935 )
scale = Vector2( 2.9004, 4 )
texture = ExtResource( 1 )

[node name="Map" type="Node2D" parent="."]
position = Vector2( 1377.71, 627.819 )
script = ExtResource( 2 )
map_size = 4
update_map_size = false
update_map_default = false

[node name="OverlayCell" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 0, -345 )
faction = 5
map_pos = Vector2( 3, 0 )

[node name="OverlayCell2" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 120, -287.5 )
faction = 5
map_pos = Vector2( 4, 0 )

[node name="OverlayCell3" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 240, -230 )
faction = 4
map_pos = Vector2( 5, 0 )

[node name="OverlayCell4" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 360, -172.5 )
faction = 4
map_pos = Vector2( 6, 0 )

[node name="OverlayCell5" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -120, -287.5 )
faction = 3
map_pos = Vector2( 2, 1 )

[node name="OverlayCell6" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 0, -230 )
faction = 5
map_pos = Vector2( 3, 1 )

[node name="OverlayCell7" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 120, -172.5 )
faction = 5
map_pos = Vector2( 4, 1 )

[node name="OverlayCell8" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 240, -115 )
faction = 4
map_pos = Vector2( 5, 1 )

[node name="OverlayCell9" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 360, -57.5 )
faction = 4
map_pos = Vector2( 6, 1 )

[node name="OverlayCell10" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -240, -230 )
faction = 3
map_pos = Vector2( 1, 2 )

[node name="OverlayCell11" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -120, -172.5 )
faction = 5
map_pos = Vector2( 2, 2 )

[node name="OverlayCell12" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 0, -115 )
faction = 5
map_pos = Vector2( 3, 2 )

[node name="OverlayCell13" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 120, -57.5 )
faction = 5
map_pos = Vector2( 4, 2 )

[node name="OverlayCell14" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 240, 0 )
faction = 4
map_pos = Vector2( 5, 2 )

[node name="OverlayCell15" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 360, 57.5 )
faction = 4
map_pos = Vector2( 6, 2 )

[node name="OverlayCell16" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -360, -172.5 )
faction = 3
map_pos = Vector2( 0, 3 )

[node name="OverlayCell17" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -240, -115 )
faction = 3
map_pos = Vector2( 1, 3 )

[node name="OverlayCell18" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -120, -57.5 )
faction = 5
map_pos = Vector2( 2, 3 )

[node name="OverlayCell19" parent="Map" instance=ExtResource( 7 )]
faction = 5
map_pos = Vector2( 3, 3 )

[node name="OverlayCell20" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 120, 57.5 )
faction = 2
map_pos = Vector2( 4, 3 )

[node name="OverlayCell21" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 240, 115 )
faction = 2
map_pos = Vector2( 5, 3 )

[node name="OverlayCell22" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 360, 172.5 )
faction = 2
map_pos = Vector2( 6, 3 )

[node name="OverlayCell23" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -360, -57.5 )
faction = 3
map_pos = Vector2( 0, 4 )

[node name="OverlayCell24" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -240, 0 )
faction = 3
map_pos = Vector2( 1, 4 )

[node name="OverlayCell25" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -120, 57.5 )
faction = 3
map_pos = Vector2( 2, 4 )

[node name="OverlayCell26" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 0, 115 )
faction = 2
map_pos = Vector2( 3, 4 )

[node name="OverlayCell27" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 120, 172.5 )
faction = 2
map_pos = Vector2( 4, 4 )

[node name="OverlayCell28" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 240, 230 )
faction = 2
map_pos = Vector2( 5, 4 )

[node name="OverlayCell29" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -360, 57.5 )
faction = 3
map_pos = Vector2( 0, 5 )

[node name="OverlayCell30" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -240, 115 )
faction = 1
map_pos = Vector2( 1, 5 )

[node name="OverlayCell31" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -120, 172.5 )
faction = 1
map_pos = Vector2( 2, 5 )

[node name="OverlayCell32" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 0, 230 )
faction = 1
map_pos = Vector2( 3, 5 )

[node name="OverlayCell33" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 120, 287.5 )
faction = 2
map_pos = Vector2( 4, 5 )

[node name="OverlayCell34" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -360, 172.5 )
faction = 1
map_pos = Vector2( 0, 6 )

[node name="OverlayCell35" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -240, 230 )
faction = 1
map_pos = Vector2( 1, 6 )

[node name="OverlayCell36" parent="Map" instance=ExtResource( 7 )]
position = Vector2( -120, 287.5 )
faction = 1
map_pos = Vector2( 2, 6 )

[node name="OverlayCell37" parent="Map" instance=ExtResource( 7 )]
position = Vector2( 0, 345 )
map_pos = Vector2( 3, 6 )

[node name="ActionHUD" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 22.3726
margin_top = 23.3612
margin_right = 62.3726
margin_bottom = 63.3612
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="Sprite" parent="ActionHUD"]
modulate = Color( 0.337255, 0.337255, 0.337255, 1 )
scale = Vector2( 13.12, 6.99266 )
texture = ExtResource( 3 )
offset = Vector2( 32, 32 )

[node name="VBoxContainer" type="VBoxContainer" parent="ActionHUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="ActionHUD/VBoxContainer"]
margin_right = 831.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Select territory and action to take!"

[node name="ActionSelect" type="HBoxContainer" parent="ActionHUD/VBoxContainer"]
margin_top = 36.0
margin_right = 831.0
margin_bottom = 86.0

[node name="Label2" type="Label" parent="ActionHUD/VBoxContainer/ActionSelect"]
margin_top = 9.0
margin_right = 364.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )
text = "Possible actions:"

[node name="ExploreButton" parent="ActionHUD/VBoxContainer/ActionSelect" instance=ExtResource( 5 )]
margin_left = 368.0
margin_top = 0.0
margin_right = 542.262
margin_bottom = 50.1093
text = "Explore"

[node name="AttackButton" parent="ActionHUD/VBoxContainer/ActionSelect" instance=ExtResource( 5 )]
margin_left = 546.0
margin_top = 0.0
margin_right = 696.262
margin_bottom = 50.1093
text = "Invade"

[node name="TerritorySelect" type="HBoxContainer" parent="ActionHUD/VBoxContainer"]
margin_top = 90.0
margin_right = 831.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="ActionHUD/VBoxContainer/TerritorySelect"]
margin_right = 620.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Selected territory faction: "

[node name="TerritorySelected" type="Label" parent="ActionHUD/VBoxContainer/TerritorySelect"]
margin_left = 624.0
margin_right = 624.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )

[node name="Empty" type="Label" parent="ActionHUD/VBoxContainer"]
margin_top = 126.0
margin_right = 831.0
margin_bottom = 158.0
custom_fonts/font = ExtResource( 4 )

[node name="PartySelect" type="HBoxContainer" parent="ActionHUD/VBoxContainer"]
margin_top = 162.0
margin_right = 831.0
margin_bottom = 212.0

[node name="Label" type="Label" parent="ActionHUD/VBoxContainer/PartySelect"]
margin_top = 9.0
margin_right = 236.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )
text = "Party size:"

[node name="PartyAnts" type="Label" parent="ActionHUD/VBoxContainer/PartySelect"]
margin_left = 240.0
margin_top = 9.0
margin_right = 264.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="LessAnts" parent="ActionHUD/VBoxContainer/PartySelect" instance=ExtResource( 5 )]
margin_left = 268.0
margin_top = 0.0
margin_right = 306.262
margin_bottom = 50.1093
text = "-"

[node name="MoreAnts" parent="ActionHUD/VBoxContainer/PartySelect" instance=ExtResource( 5 )]
margin_left = 310.0
margin_top = 0.0
margin_right = 348.262
margin_bottom = 50.1093
text = "+"

[node name="Empty2" type="Label" parent="ActionHUD/VBoxContainer"]
margin_top = 216.0
margin_right = 831.0
margin_bottom = 248.0
custom_fonts/font = ExtResource( 4 )

[node name="ConfirmSelect" type="HBoxContainer" parent="ActionHUD/VBoxContainer"]
margin_top = 252.0
margin_right = 831.0
margin_bottom = 302.0

[node name="Empty3" type="Label" parent="ActionHUD/VBoxContainer/ConfirmSelect"]
margin_top = 9.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )

[node name="ConfirmAction" parent="ActionHUD/VBoxContainer/ConfirmSelect" instance=ExtResource( 5 )]
margin_left = 4.0
margin_top = 0.0
margin_right = 206.262
margin_bottom = 50.1093
text = "I'm ready"

[node name="TempInfo" type="Label" parent="ActionHUD/VBoxContainer"]
margin_top = 306.0
margin_right = 831.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 1 )
text = "
You are the green colony
Can only explore territory adjacent to yours
Can only invade explored territory
Full tile background means tile is explored"
[connection signal="pressed" from="ActionHUD/VBoxContainer/ActionSelect/ExploreButton" to="." method="_on_ExploreButton_pressed"]
[connection signal="pressed" from="ActionHUD/VBoxContainer/ActionSelect/AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="pressed" from="ActionHUD/VBoxContainer/PartySelect/LessAnts" to="ActionHUD" method="_on_LessAnts_pressed"]
[connection signal="pressed" from="ActionHUD/VBoxContainer/PartySelect/MoreAnts" to="ActionHUD" method="_on_MoreAnts_pressed"]
[connection signal="pressed" from="ActionHUD/VBoxContainer/ConfirmSelect/ConfirmAction" to="." method="_on_ConfirmAction_pressed"]
